# pods.velezj-pods-utils

./: .gitignore  CMakeLists.txt  Makefile  README
cmake/: pods-completion.cmake
src/: Makefile.template  build-pod  create-configure-pod.sh  library-source-map.txt  my-sneaky-pkg-config.py  pod-fetch.py  pod-run  pod-run.completion  produce-to-build.py  test_order.txt
